--- a/nts.uk/uk.at/build.gradle
+++ b/nts.uk/uk.at/build.gradle
@@ -445,9 +445,10 @@ project (':at.screen:nts.uk.screen.at.app') {
 	 	compile project (':at.ctx:record:nts.uk.ctx.at.record.dom')
 	 	compile project (':at.ctx:request:nts.uk.ctx.at.request.app')
 	 	compile project (':at.ctx:request:nts.uk.ctx.at.request.dom')
-		compile (group: 'com.bs.company', name: 'nts.uk.ctx.bs.company.dom', version: '0.8.1')
+		compile(group: 'com.bs.company', name: 'nts.uk.ctx.bs.company.dom', version: '0.8.1')
 		compile(group: 'com.bs.employee', name: 'nts.uk.ctx.bs.employee.dom', version: '0.10.24')
-		compile (group: 'com.bs.person', name: 'nts.uk.ctx.bs.person.dom', version: '0.6.2')
+		compile(group: 'com.bs.person', name: 'nts.uk.ctx.bs.person.dom', version: '0.6.2')
+		compile(group: 'com.workflow', name: 'nts.uk.ctx.workflow.app', version: '0.11.1.4')
 	}
 }
 
