--- a/nts.uk/uk.at/build.gradle
+++ b/nts.uk/uk.at/build.gradle
@@ -110,6 +110,9 @@ subprojects {
         // Apache commons IO
 		compile group: 'commons-io', name: 'commons-io', version: '2.5'
 		
+		// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
+		compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
+		
         compile group: 'nts.gul', name: 'nts.gul', version: '0.43'
         compile group: 'nts.arc', name: 'nts.arc', version: '0.56'
 		
