--- a/nts.uk/uk.at/build.gradle
+++ b/nts.uk/uk.at/build.gradle
@@ -116,7 +116,7 @@ subprojects {
         compile group: 'nts.gul', name: 'nts.gul', version: '0.43'
         compile group: 'nts.arc', name: 'nts.arc', version: '0.56'
 		
-		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.30'
+		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.32\1'
 	}
 }
 
@@ -544,7 +544,7 @@ project (':at.web:nts.uk.at.web') {
 	}
 	
 	dependencies {
-		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.30'
+		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.31'
 		compile group: 'com.shr', name: 'nts.uk.shr.find', version: '0.1.1'
 		providedCompile group: 'com.sun.faces', name: 'jsf-api', version: '2.2.13'
 		compile group: 'aspose', name: 'cells', version: '9.0.0'
