--- a/nts.uk/uk.com/settings.gradle
+++ b/nts.uk/uk.com/settings.gradle
@@ -95,6 +95,12 @@ include 'pereg.ctx:nts.uk.ctx.pereg.infra'
 include 'pereg.ctx:nts.uk.ctx.pereg.ws'
 include 'pereg.ctx:nts.uk.ctx.pereg.ac'
 
+include 'exio.ctx:nts.uk.ctx.exio.app'
+include 'exio.ctx:nts.uk.ctx.exio.dom'
+include 'exio.ctx:nts.uk.ctx.exio.infra'
+include 'exio.ctx:nts.uk.ctx.exio.ws'
+include 'exio.ctx:nts.uk.ctx.exio.ac'
+
 include 'query:nts.uk.query.app'
 include 'query:nts.uk.query.model'
 include 'query:nts.uk.query.infra'
