--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -110,10 +110,13 @@ subprojects {
         // Apache commons IO
 		compile group: 'commons-io', name: 'commons-io', version: '2.5'
 		
-        compile group: 'nts.gul', name: 'nts.gul', version: '0.41'
-        compile group: 'nts.arc', name: 'nts.arc', version: '0.54'
+		// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
+		compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
 		
-		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.20'
+        compile group: 'nts.gul', name: 'nts.gul', version: '0.44'
+        compile group: 'nts.arc', name: 'nts.arc', version: '0.57'
+		
+		compile group: 'com.shr', name: 'nts.uk.shr.com', version: '0.7.32'
 	}
 }
 
