--- a/nts.uk/uk.com/build.gradle
+++ b/nts.uk/uk.com/build.gradle
@@ -1175,7 +1175,7 @@ project (':query:nts.uk.query.infra') {
 		compile group: 'at.record', name: 'nts.uk.ctx.at.record.infra', version: '0.3.11'
 		compile group: 'at.request', name: 'nts.uk.ctx.at.request.infra', version: '0.3.5'
 		compile group: 'at.schedule', name: 'nts.uk.ctx.at.schedule.infra', version: '0.4.4'
-		compile group: 'at.shared', name: 'nts.uk.ctx.at.shared.infra', version: '0.5.18.'
+		compile group: 'at.shared', name: 'nts.uk.ctx.at.shared.infra', version: '0.5.18.3'
 		
 		//compile group: 'pr.core', name: 'nts.uk.ctx.pr.core.infra', version: '0.1'
 		//compile group: 'pr.formula', name: 'nts.uk.ctx.pr.formula.infra', version: '0.1'
