--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ nts.uk/uk.com/gradlew
 nts.uk/uk.com/gradle/wrapper/gradle-wrapper.properties
 nts.uk/uk.com/gradle/wrapper/gradle-wrapper.jar
 
+nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/cmf001.d.vm.ts
