--- a/nts.uk/uk.at/build.gradle
+++ b/nts.uk/uk.at/build.gradle
@@ -455,6 +455,7 @@ project (':at.screen:nts.uk.screen.at.app') {
 	 	compile project (':at.ctx:request:nts.uk.ctx.at.request.dom')
 		compile(group: 'com.bs.company', name: 'nts.uk.ctx.bs.company.dom', version: '0.8.2')
 		compile(group: 'com.bs.employee', name: 'nts.uk.ctx.bs.employee.dom', version: '0.10.35')
+		compile(group: 'com.bs.employee', name: 'nts.uk.ctx.bs.employee.app', version: '0.10.35')
 		compile(group: 'com.bs.person', name: 'nts.uk.ctx.bs.person.dom', version: '0.6.4')
 		compile(group: 'com.workflow', name: 'nts.uk.ctx.workflow.app', version: '0.12.11')
 	}
