--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -246,6 +246,7 @@ project (':pr.ctx:pr.core:nts.uk.ctx.pr.core.ac') {
 		compile project(':pr.ctx:pr.core:nts.uk.ctx.pr.core.dom')
 		compile project(':pr.ctx:pr.shared:nts.uk.ctx.pr.shared.dom')
 		compile(group: 'com.bs.employee', name: 'nts.uk.ctx.bs.employee.pub', version: version)
+		compile (group: 'com.query', name: 'nts.uk.query.pub', version: version)
 	}
 }
 
