--- a/nts.uk/uk.at/build.gradle
+++ b/nts.uk/uk.at/build.gradle
@@ -636,6 +636,7 @@ project (':at.web:nts.uk.at.web') {
 		
 		// for SMTP authentications
 		runtime group: 'org.apache.geronimo.javamail', name: 'geronimo-javamail_1.4_mail', version: '1.8.4'
+		runtime group: 'jcifs', name: 'jcifs', version: '1.3.17'
 		
 		runtime project (':at.ctx:at.auth:nts.uk.ctx.at.auth.ac')
 		runtime project (':at.ctx:at.auth:nts.uk.ctx.at.auth.app')
