--- a/nts.uk/uk.com/build.gradle
+++ b/nts.uk/uk.com/build.gradle
@@ -177,6 +177,10 @@ subprojects {
 		// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
 		compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
 		
+		// HttpClient
+		compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+		compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.9'
+		
 		// For Login feature.
 		// https://mvnrepository.com/artifact/com.github.dblock.waffle/waffle-jna
 		compile group: 'com.github.dblock.waffle', name: 'waffle-jna', version: '1.8.1'
