--- a/nts.uk/uk.com/build.gradle
+++ b/nts.uk/uk.com/build.gradle
@@ -1563,5 +1563,6 @@ project (':pub:nts.uk.pub.spr') {
 		compile project (':com.ctx:bs:employee:nts.uk.ctx.bs.employee.pub')
 		compile project (':wk.ctx:nts.uk.ctx.workflow.pub')
 		compile project (':com.ctx:sys:auth:nts.uk.ctx.sys.auth.pub')
+		compile project (':com.ctx:sys:gateway:nts.uk.ctx.sys.gateway.app')
 	}
 }
