--- a/nts.uk/uk.com/build.gradle
+++ b/nts.uk/uk.com/build.gradle
@@ -1311,6 +1311,7 @@ project (':pereg.ctx:nts.uk.ctx.pereg.app') {
 		compile project (':com.ctx:basic:nts.uk.ctx.basic.dom')
 		compile project (':com.ctx:sys:auth:nts.uk.ctx.sys.auth.app')
 		compile project (':com.ctx:sys:auth:nts.uk.ctx.sys.auth.dom')
+		compile project (':com.ctx:sys:auth:nts.uk.ctx.sys.auth.pub')
 		compile project (':com.ctx:sys:portal:nts.uk.ctx.sys.portal.app')
 		compile project (':com.ctx:sys:portal:nts.uk.ctx.sys.portal.dom')
 		compile project (':com.ctx:sys:gateway:nts.uk.ctx.sys.gateway.app')
