--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -201,6 +201,7 @@ project (':pr.ctx:pr.shared:nts.uk.ctx.pr.shared.ws') {
 project (':pr.ctx:pr.shared:nts.uk.ctx.pr.shared.ac') {
 	dependencies {
 		compile project(':pr.ctx:pr.shared:nts.uk.ctx.pr.shared.dom')
+		compile project(':pr.ctx:pr.core:nts.uk.ctx.pr.core.pub')
 	}
 }
 
