--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -432,6 +432,7 @@ project (':pr.ctx:pr.transfer:nts.uk.ctx.pr.transfer.ac') {
 		compile project(':pr.ctx:pr.core:nts.uk.ctx.pr.core.pub')
 		compile project(':pr.ctx:pr.retire:nts.uk.ctx.pr.retire.pub')
 		compile (group: 'com.query', name: 'nts.uk.query.pub', version: version)
+		compile (group: 'com.bs.employee', name: 'nts.uk.ctx.bs.employee.pub', version: version)
 	}
 }
 
