--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -802,7 +802,10 @@ project (':pr.web:nts.uk.pr.web') {
 		runtime group: 'at.auth', name: 'nts.uk.ctx.at.auth.infra', version: version
 		runtime group: 'at.auth', name: 'nts.uk.ctx.at.auth.pub', version: version
 		runtime group: 'at.auth', name: 'nts.uk.ctx.at.auth.pubimp', version: version
-		
+
+		runtime group: 'at.screen', name: 'nts.uk.screen.at.app', version: version
+		runtime group: 'at.screen', name: 'nts.uk.screen.at.infra', version: version
+
 		runtime group: 'at.function', name: 'nts.uk.ctx.at.function.ac', version: version
 		runtime group: 'at.function', name: 'nts.uk.ctx.at.function.app', version: version
 		runtime group: 'at.function', name: 'nts.uk.ctx.at.function.dom', version: version
