--- a/nts.uk/uk.pr/build.gradle
+++ b/nts.uk/uk.pr/build.gradle
@@ -230,6 +230,7 @@ project (':pr.ctx:pr.core:nts.uk.ctx.pr.core.app') {
 project (':pr.ctx:pr.core:nts.uk.ctx.pr.core.dom') {
 	dependencies {
 		compile project(':pr.ctx:pr.shared:nts.uk.ctx.pr.shared.dom')
+		compile group: 'aspose', name: 'cells', version: '9.0.0'
 	}
 }
 
