update ignore file for mobile project

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@
 **/base.web/**/*bundles.js*
 
 nts.uk/uk.repo/*
+
+# add ignore file of mobile project
+**/.vscode/*
+**/node_modules/*
+**/package-lock.json
+**/vendor*
+**/bundles*
+**/main-server*
+**/wwwroot/*
+**/.DS_Store
